--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "config": "^1.20.1",
+    "forever": "^0.15.1",
     "mqtt": "^1.8.0",
     "pg": "^4.5.3"
   }
